# ison

./: .gitignore  README.md  test.ison
.github/workflows/: ci.yml  publish-crates.yml  publish-npm.yml  publish-pypi.yml  release-all.yml
benchmark/: BENCHMARK_300.md  README.md  benchmark_300.py  benchmark_300_20251225_190937.json  requirements.txt
ison-cpp/: CHANGELOG.md  CMakeLists.txt  README.md
ison-cpp/cmake/: ison_cppConfig.cmake.in  ison_parserConfig.cmake.in
ison-cpp/examples/: example.cpp
ison-cpp/include/: ison_parser.hpp
ison-cpp/tests/: test_ison_parser.cpp
ison-go/: README.md  go.mod  ison.go  ison_test.go
ison-js/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
ison-js/scripts/: build-esm.js
ison-js/src/: ison-parser.js
ison-js/test/: test_ison_parser.js
ison-py/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
ison-py/src/ison_parser/: __init__.py
ison-py/src/ison_parser/integrations/: __init__.py
ison-py/src/ison_parser/plugins/: rudradb_plugin.py
ison-py/tests/: test_rudradb_plugin.py
ison-rust/: CHANGELOG.md  Cargo.toml  README.md
ison-rust/examples/: basic.rs
ison-rust/src/: lib.rs
ison-rust/src/plugins/: mod.rs  rudradb_plugin.rs
ison-ts/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
ison-ts/src/: index.test.ts  index.ts
ison-vscode/: README.md  ison-lang-1.0.1.vsix  language-configuration-isonl.json  language-configuration.json  package-lock.json  package.json
ison-vscode/snippets/: ison.json
ison-vscode/src/: extension.ts
ison-vscode/syntaxes/: ison.tmLanguage.json  isonl.tmLanguage.json
isonantic/: README.md
isonantic-cpp/: .gitignore  CMakeLists.txt  README.md
isonantic-cpp/include/: isonantic.hpp
isonantic-go/: README.md  go.mod  isonantic.go  isonantic_test.go
isonantic-rust/: .gitignore  Cargo.toml  README.md
isonantic-rust/examples/: basic.rs
isonantic-rust/src/: lib.rs  schema.rs  validators.rs
isonantic-ts/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
isonantic-ts/src/: index.test.ts  index.ts
n8n-nodes-ison/: README.md  index.js  package.json  tsconfig.json
n8n-nodes-ison/nodes/Ison/: Ison.node.ts
